# senior_design

./: .gitignore  CMakeLists.txt  main.cpp  quadcopter.kdev4
linefitter/: CMakeLists.txt  lsdlinefitter.cpp
localization/: coordinatereader.cpp  coordinatereader.h  localizer.cpp  localizer.h
navigation/: CMakeLists.txt  frontiermap.cpp  frontiermap.h  virtualenvironment.cpp  virtualenvironment.h
navigation/navigationmap/: navigationmap.cpp  navigationmap.h
navigation/navigationmap/grid/: frontiergrid.cpp  opengrid.cpp  opengrid.h
occupancygrid/: CMakeLists.txt  occupancygrid.cpp  occupancygrid.h  occupancygridaccording.cpp  occupancygridfrontier.cpp  occupancygridhough.cpp  occupancygridlsd.cpp
occupancygrid/grid/: grid.cpp  grid.h  houghgrid.cpp  houghgrid.h  houghleastsquares.cpp  houghleastsquares.h  houghline.cpp  houghline.h
pngwriter/: png_writer.cpp
resizablegrid/: CMakeLists.txt  resizableGrid.cpp  resizableGrid.h
resizablegrid/nodes/: node.cpp  node.h
sonar/: CMakeLists.txt  sonararchive.cpp  sonararchive.h  sonarscan.cpp  sonarscan.h
