add_library(occupancy_grid  occupancygrid.cpp
                            occupancygridaccording.cpp
                            occupancygridfrontier.cpp
                            occupancygridhough.cpp
                            grid/grid.cpp
                            grid/houghgrid.cpp
                            grid/houghleastsquares.cpp
                            ./../pngwriter/png_writer.cpp
                            )