add_library(sonar  sonararchive.cpp
                   sonarscan.cpp
                   ./../occupancygrid/occupancygrid.cpp
                   ./../occupancygrid/occupancygridaccording.cpp
                   ./../occupancygrid/occupancygridfrontier.cpp
                   ./../occupancygrid/grid/grid.cpp
                   )